
plugins {
  id 'java-library'
  id 'eclipse'
  id 'org.openjfx.javafxplugin' version '0.0.10'
  id 'application'
}

defaultTasks 'jar'

repositories {
  mavenCentral()
}

project.ext {
  javafxVersion = 17;
}

javafx {
  version = "17"
  modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics']
}

dependencies {
  implementation 'org.swinglabs:swing-layout:1.0.3'
  implementation 'org.swinglabs:swingx:0.9.4'
  implementation 'com.jgoodies:forms:1.0.7'
  implementation 'com.ibm.icu:icu4j:4.0.1'
  implementation 'com.jidesoft:jide-oss:3.6.18'
  implementation 'com.jgoodies:looks:2.2.1'
  implementation 'eu.medsea.mimeutil:mime-util:2.1.3'
  implementation 'javax.help:javahelp:2.0.05'
  implementation 'com.l2fprod.common:l2fprod-common-fontchooser:6.9.1'
  implementation 'com.fasterxml.jackson.core:jackson-annotations:2.12.4'
  implementation 'com.fasterxml.jackson.core:jackson-core:2.12.4'
  implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.4'
  implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.12.4'
  implementation 'com.miglayout:miglayout-javafx:5.2'
  implementation 'org.controlsfx:controlsfx:11.1.0'
  //implementation 'org.fxmisc.richtext:richtextfx:0.10.6'
  implementation 'org.fxmisc.flowless:flowless:0.6.3'
  implementation 'org.fxmisc.undo:undofx:2.1.0'
  implementation 'org.fxmisc.wellbehaved:wellbehavedfx:0.3.3'
  implementation 'org.reactfx:reactfx:2.0.M5'

  //implementation 'org.openjfx:javafx:13'

  //implementation "org.openjfx:javafx-base:13"
  //implementation "org.openjfx:javafx-graphics:13"
  //implementation "org.openjfx:javafx-controls:13"

  //implementation "org.openjfx:javafx-base:13:linux"
  //implementation "org.openjfx:javafx-graphics:13:linux"
  //implementation "org.openjfx:javafx-controls:13:linux"
  //implementation "org.openjfx:javafx-swing:13:linux"

  //implementation "org.openjfx:javafx-graphics:$javafx.version:win"
  //implementation "org.openjfx:javafx-graphics:$javafx.version:mac"
  //implementation "org.openjfx:javafx-swing:$javafx.version:win"
  //implementation "org.openjfx:javafx-swing:$javafx.version:mac"

  //runtimeOnly "org.openjfx:javafx-base:$javafxVersion:win"
  //runtimeOnly "org.openjfx:javafx-graphics:$javafxVersion:win"
  //runtimeOnly "org.openjfx:javafx-controls:$javafxVersion:win"

  //runtimeOnly "org.openjfx:javafx-base:$javafxVersion:linux"
  //runtimeOnly "org.openjfx:javafx-graphics:$javafxVersion:linux"
  //runtimeOnly "org.openjfx:javafx-controls:$javafxVersion:linux"

  //runtimeOnly "org.openjfx:javafx-base:$javafxVersion:mac"
  //runtimeOnly "org.openjfx:javafx-graphics:$javafxVersion:mac"
  //runtimeOnly "org.openjfx:javafx-controls:$javafxVersion:mac"
}

java {
  sourceCompatibility = JavaVersion.VERSION_1_8
  targetCompatibility = JavaVersion.VERSION_1_8
}

jar {
    manifest {
        //attributes 'Main-Class': 'org.jmeld.JMeld'
        attributes 'Main-Class': 'org.jmeld.fx.JMeldFxMain'
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

